# RecipeWizard

./: .gitignore  Dockerfile  README.rst  pyproject.toml  requirements.txt  setup.cfg
recipe_wizard/: __init__.py  config.py  config_testing.py  database.py  models.py  schema.py
recipe_wizard/rest/: grocery_list_api.py  recipes_api.py  rest_api.py
recipe_wizard/static/: old style.css  script.js  styles.css
recipe_wizard/templates/: base.html  base_with_sidebar.html  macros.html
recipe_wizard/templates/grocery/: grocery-list.html  recipe-selection.html
recipe_wizard/templates/recipes/: create.html  edit.html  index.html  oldcreate.html  selection.html
recipe_wizard/web/: web.py
sample_data/: recipe_samples.json
tests/: conftest.py  recipe_samples.json  test_rest_api.py
